# bridge_cuda

./: .gitignore  CMakeLists.txt  CMakePresets.json  ChangeLog.txt  Makefile  Makefile.in  Makefile_target.inc  README.md  README.txt  VERSION  doc.txt  main.yaml  make_out.txt  multiword_en.txt  pdf_text.txt  test_qdw_math  test_qdw_math.cu
src/: CMakeLists.txt  Makefile  aligned_allocator_impl.h  bridge.h  bridge_complex.h  bridge_defs.h  complexTraits.h  configure.h  doxygen.h
src/lib/: bridge_init_factory.cpp  bridge_setup.h
src/lib/Eigen/: aeigensolver.h.res  aeigensolver_IRArnoldi-tmpl.h  aeigensolver_IRArnoldi-tmpl.h.res  aeigensolver_IRArnoldi.h  aeigensolver_IRArnoldi.h.res  aeigensolver_IRLanczos-tmpl.h  aeigensolver_IRLanczos-tmpl.h.res  aeigensolver_IRLanczos.h  aeigensolver_IRLanczos.h.res
src/lib/Field/: field.cpp  field_F_1spinor.cpp
src/lib/Fopr/: #fopr_Overlap_5d.cpp#  afopr.h  afopr_Chebyshev.h  afopr_Clover_Chemical.h  afopr_Domainwall_eo-tmpl.h  afopr_Domainwall_eo.h  afopr_Overlap.h  afopr_Overlap_5d-tmpl.h  afopr_Overlap_5d.h  afopr_Rational-tmpl.h  afopr_Rational.h  afopr_Sign.h  afopr_Smeared_alt-tmpl.h  afopr_Smeared_alt.h  afopr_Smeared_eo.h  afopr_Wilson_Chemical.h  afopr_Wilson_TwistedMass.h  fopr.cpp  fopr_Clover.cpp  fopr_Clover_eo.h  fopr_Domainwall_eo.cpp  fopr_Overlap_5d.cpp  fopr_Overlap_5d.h  fopr_Smeared.cpp  fopr_Smeared_alt.cpp  fopr_Smeared_alt.h
src/lib/HMC/: hmc_General.cpp  integrator_Leapfrog.cpp  integrator_Omelyan.cpp
src/lib/IO/: bridgeIO.cpp  bridgeIO.h
src/lib/Smear/: aforceSmear.h  aprojection.h  asmear.h  director_Smear.cpp  director_Smear.h  director_alt_Smear.cpp  forceSmear.cpp  forceSmear.h  forceSmear_APE.cpp  forceSmear_APE_SF.cpp  forceSmear_APE_SF.h  forceSmear_HYP.cpp  forceSmear_HYP_SF.cpp  forceSmear_HYP_SF.h  projection.cpp  projection.h  projection_Stout_SU3.cpp  projection_Stout_SU3.h  smear.cpp  smear.h
src/lib/Solver/: ashiftsolver.h  ashiftsolver_CG-tmpl.h  ashiftsolver_CG.h  solver_BiCGStab_L_Cmplx.cpp
src/lib/Tools/: fft.h  fft_3d_local.cpp  fft_3d_local.h  fft_3d_parallel1d.cpp  fft_3d_parallel1d.h  fft_3d_parallel3d.cpp  fft_3d_parallel3d.h  fft_xyz_1dim.h  fft_xyz_3dim.cpp  fft_xyz_3dim.h  math_Sign_Zolotarev_Omega.cpp  math_Sign_Zolotarev_Omega.h  randomNumbers_Mseries.cpp
src/lib_alt/: bridge_alt_init.cpp
src/lib_alt/Eigen/: aeigensolver_IRArnoldi_block-tmpl.h  aeigensolver_IRArnoldi_block.h
src/lib_alt/Field/: aindex_block_lex_base.h
src/lib_alt/Fopr/: afopr_Domainwall_dd-tmpl.h  afopr_Domainwall_dd.h
src/lib_alt/Smear/: director_alt_Smear-tmpl.h  director_alt_Smear.h
src/lib_alt/Solver/: aprecond_MG.h  aprecond_Mixedprec-tmpl.h  asolver.h  asolver_BiCGStab-tmpl.h  asolver_BiCGStab.h  asolver_BiCGStab_Cmplx.h  asolver_BiCGStab_Cmplx_fp16-tmpl.h  asolver_BiCGStab_fp16-tmpl.h  asolver_BiCGStab_fp64-tmpl.h  asolver_CG-tmpl.h  asolver_CG.h  asolver_CGNR-tmpl.h  asolver_CG_fp16-tmpl.h  asolver_FBiCGStab-tmpl.h  asolver_FBiCGStab.h  asolver_FGMRES-tmpl.h  asolver_FGMRES.h  asolver_GMRES_m_Cmplx-tmpl.h  asolver_GMRES_m_Cmplx.h  asolver_MG.h  asolver_MG_double.h  asolver_Richardson-tmpl.h  asolver_Richardson.h  asolver_SAP-tmpl.h  asolver_SAP.h
src/lib_alt_Accel/: bridge_alt_accel.h  bridge_init_factory_alt_Accel.cpp  bridge_init_factory_alt_Accel.h  init_alt_Accel.cpp  init_alt_Accel.h
src/lib_alt_Accel/BridgeCUDA/: BridgeCUDA  CMakeLists.txt  Makefile  bridgeACC.cu  bridgeACC.h  bridgeACC_AField.h  bridgeACC_AField_Gauge.h  bridgeACC_AField_dd.h  bridgeACC_Clover.h  bridgeACC_CloverTerm_float.cu  bridgeACC_Clover_coarse.h  bridgeACC_Clover_coarse_double.cu  bridgeACC_Clover_float.cu  bridgeACC_Domainwall.h  bridgeACC_Domainwall_5din_double.cu  bridgeACC_Domainwall_5din_float.cu  bridgeACC_Domainwall_coarse.h  bridgeACC_Index_eo_alt.h  bridgeACC_ShiftAField_lex.h  bridgeACC_Wilson.h  bridgeACC_Wilson_CLE.h  bridgeACC_Wilson_double.cu  bridgeACC_Wilson_float.cu  bridgeACC_float.cu  bridgeACC_mrhs_block_float.cu  constant_memory.cu  constant_memory.h  mrhs_block_live.h
src/lib_alt_Accel/BridgeNVSHMEM/: CMakeLists.txt  Makefile  bridgeACC.cu  bridgeACC.h  bridgeACC_AField.cu  bridgeACC_AField_dd.h  bridgeACC_AField_double.cu  bridgeACC_AField_float.cu  bridgeACC_CloverTerm_double.cu  bridgeACC_Clover_coarse_float.cu  bridgeACC_Clover_double.cu  bridgeACC_Domainwall.h  bridgeACC_Domainwall_5din_double.cu  bridgeACC_Domainwall_5din_float.cu  bridgeACC_Domainwall_coarse.h  bridgeACC_Domainwall_coarse_double.cu  bridgeACC_Domainwall_coarse_float.cu  bridgeACC_Index_eo_alt.h  bridgeACC_Staggered.h  bridgeACC_Wilson_double.cu  bridgeACC_Wilson_float.cu  bridgeACC_double.cu  inline
src/lib_alt_Accel/BridgeOpenACC/: bridgeACC.cpp  bridgeACC.h  bridgeACC_AField.h  bridgeACC_AField_Gauge.h  bridgeACC_AField_dd.h  bridgeACC_AField_double.cpp  bridgeACC_AField_float.cpp  bridgeACC_Clover.h  bridgeACC_Clover_coarse.h  bridgeACC_Clover_coarse_double.cpp  bridgeACC_Clover_coarse_float.cpp  bridgeACC_Clover_double.cpp  bridgeACC_Clover_float.cpp  bridgeACC_Domainwall.h  bridgeACC_Domainwall_coarse.h  bridgeACC_Domainwall_coarse_double.cpp  bridgeACC_Domainwall_coarse_float.cpp  bridgeACC_Domainwall_double.cpp  bridgeACC_Domainwall_float.cpp  bridgeACC_Index_eo_alt.h  bridgeACC_ShiftAField_lex.h  bridgeACC_Staggered.h  bridgeACC_Staggered_double.cpp  bridgeACC_Staggered_float.cpp  bridgeACC_Wilson.h  bridgeACC_Wilson_CLE.h  bridgeACC_Wilson_CLE_double.cpp  bridgeACC_Wilson_double.cpp  bridgeACC_Wilson_float.cpp  define_index.h  define_params.h
src/lib_alt_QXS/: bridge_init_factory_alt_QXS.cpp  bridge_init_factory_alt_QXS.h
src/lib_alt_SIMD2/: bridge_alt_simd2.h  bridge_init_factory_alt_SIMD2.cpp  bridge_init_factory_alt_SIMD2.h  init_alt_SIMD2.cpp  init_alt_SIMD2.h
src/lib_alt_Vector/: bridge_alt_vector.h  bridge_init_factory_alt_Vector.cpp  bridge_init_factory_alt_Vector.h  init_alt_Vector.cpp  init_alt_Vector.h
tests/: CMakeLists.txt  test_GradientFlow_EnergyMomentumTensor_Fermion_1pt_Function.yaml  test_Spectrum_Overlap_Hadron2ptFunction_5dSolver.yaml
tests/src/: run_test.cpp  testlist.h
(+1174 files in other folders)
